# aw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  config.example.yaml  install.sh  migrate-base-workspaces.sh
.github/workflows/: parity.yml  release.yml
docs/: AGENTS.md  architecture.md  base-workspaces.md  dash.md  migration.md  performance-considerations.md  prompt-customization.md  quick-reference.md  remote-sessions.md  serve.md  shell-integration.md
hooks/pi/: index.ts  package.json
prototype/remote/: README.md  aw-remote.mjs
scripts/: build-frontend.sh  homebrew-formula.rb.tmpl
src/: cli.rs  config.rs  git.rs  hook.rs  main.rs  paths.rs  self_update.rs
src/dash/: gc.rs  mod.rs  notify.rs  remote_link.rs  render.rs  state.rs  tmux.rs
src/dash/tui/: app.rs  keymap.rs  mod.rs  preview.rs  view.rs
src/install/: claude.rs  codex.rs  marker.rs  mod.rs  pi.rs  service.rs  shell_rc.rs  tmux.rs
src/serve/: icon.rs  mod.rs  sessions.rs  term.rs
src/serve/assets/: app.js  app.ts  index.html  tsconfig.json
src/shell/: completions.rs  detect.rs  init.rs  mod.rs
src/workspace/: config_show.rs  create.rs  delete.rs  edit.rs  init.rs  list.rs  listing.rs  meta.rs  mod.rs  reset.rs  start.rs  sync.rs
tests/: harness_smoke.rs  parity_aux.rs  parity_config.rs  parity_create.rs  parity_delete.rs  parity_errors.rs  parity_help.rs  parity_init.rs  parity_list.rs  rust_dash.rs  rust_install.rs  rust_serve.rs  rust_service.rs  rust_shell.rs  rust_sidebar.rs  rust_state.rs  rust_tui.rs
tests/common/: fixtures.rs  mod.rs  snapshot.rs
tests/fixtures/: aw-bash
tests/snapshots/: parity_config__config_rust.snap  parity_create__create_default_one_repo_tree@bash.snap  parity_create__create_local_rename_tree@rust.snap  parity_create__create_named_base_tree@bash.snap  parity_help__help_bash.snap  parity_help__help_rust.snap  parity_init__init_empty_tree@bash.snap  parity_init__init_named_base_tree@bash.snap  parity_init__init_one_remote_tree@rust.snap  parity_init__init_two_remotes_tree@bash.snap  parity_list__list_after_create_bash.snap  parity_list__list_empty_bash.snap  rust_shell__shell_init_bash.snap  rust_shell__shell_init_fish.snap  rust_shell__shell_init_zsh.snap  rust_shell__shell_start_no_tmux.snap
