[package]
name = "aw"
version = "0.1.0"
edition = "2021"
description = "Manage isolated workspaces for AI agents, with a tmux-based dashboard for live state."
license = "MIT"
publish = false

[[bin]]
name = "aw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ratatui = "0.28"
crossterm = "0.28"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml_edit = "0.22"
anyhow = "1"
thiserror = "1"
notify-rust = "4"
walkdir = "2"
shellexpand = "3"
dirs = "5"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml", "json", "redactions"] }
sha2 = "0.10"
serial_test = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
