[package]
name = "aw"
version = "1.6.0"
edition = "2021"
description = "Manage isolated workspaces for AI agents, with a tmux-based dashboard for live state."
license = "MIT"
publish = false

[[bin]]
name = "aw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ratatui = "0.28"
crossterm = "0.28"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml_edit = "0.22"
anyhow = "1"
thiserror = "1"
notify-rust = "4"
walkdir = "2"
shellexpand = "3"
dirs = "5"
tempfile = "3"
# Terminal QR rendering for the phone-pairing overlay in `aw dash`.
# Project Nayuki's generator — zero transitive dependencies.
qrcodegen = "1.8"
# Interface enumeration for picking the right LAN IP in pairing URLs —
# the UDP-connect route-lookup trick picks the VPN tunnel when one is up.
if-addrs = "0.13"
# `aw serve` — the phone remote-control daemon. tiny_http is a small
# threaded HTTP/1.1 server (no tokio); flate2 (already in the tree via
# self_update) compresses the generated PNG app icons.
tiny_http = "0.12"
flate2 = "1"
# `self_update` pulls update artifacts from GitHub Releases. We disable the
# default features (which include reqwest/native-tls and pull in OpenSSL)
# and re-enable just rustls + the formats we use, keeping the binary
# self-contained on macOS.
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml", "json", "redactions"] }
sha2 = "0.10"
serial_test = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
